# 06_WiGuard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  setup.py  wiguard.py
WiGuard/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
WiGuard/config/: config.json
WiGuard/database/: database.py  models.py
WiGuard/docs/: architecture.md  installation.md  usage.md
WiGuard/utils/: banner.py  colors.py  constants.py
cli/: commands.py  parser.py
config/: config.json  config_loader.py
database/: database.py  models.py
detector/: channel_detector.py  duplicate_detector.py  encryption_detector.py  risk_engine.py  signal_detector.py  vendor_detector.py
docs/: architecture.md  examples.md  installation.md  usage.md
reports/: history.py  report_generator.py
scanner/: linux_scanner.py  mac_scanner.py  network_parser.py  oui_db.json  wifi_scanner.py  windows_scanner.py
tests/: test_cli.py  test_database.py  test_detector.py  test_scanner.py
utils/: banner.py  colors.py  constants.py  helpers.py  validators.py
